[package]
name = "worker"
version = "0.1.0"
authors = ["VictorBulba <victor@lingle.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
worker = "0.0.11"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
